--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
   <groupId>org.jenkins-ci.plugins</groupId>
   <artifactId>aws-device-farm</artifactId>
-  <version>1.14</version>
+  <version>1.14-SNAPSHOT</version>
   <packaging>hpi</packaging>
   
   <name>aws-device-farm</name>
@@ -43,6 +43,13 @@
       <comments>A business-friendly OSS license</comments>
     </license>
   </licenses>
+  
+  <scm>
+    <connection>scm:git:ssh://github.com/jenkinsci/aws-device-farm-plugin.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/aws-device-farm-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/aws-device-farm-plugin</url>
+    <tag>HEAD</tag>
+  </scm>
 
   <developers>
     <developer>
